--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "next": "latest",
+    "next": "12.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.54.4"
